<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_tab_scanner_menu_scan"
        android:title="@string/main_tab_scanner_menu_start_scan"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_tab_scanner_menu_refresh"
        android:title="@string/main_tab_scanner_menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_tab_scanner_menu_show_rssi_graph"
        android:title="@string/main_tab_scanner_menu_show_rssi_graph"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_tab_scanner_menu_show_legend"
        android:title="@string/main_tab_scanner_menu_show_legend"
        android:checkable="true"
        app:showAsAction="never" />
</menu>