<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.florent37.expansionpanel.ExpansionHeader
            android:id="@+id/sampleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expansion_headerIndicator="@id/headerIndicator"
            app:expansion_layout="@id/expansionLayout"
            app:expansion_toggleOnClick="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_48"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/space_10"
                android:paddingRight="@dimen/space_10"
                android:gravity="center_vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_dark_1"
                    android:textSize="@dimen/txt_16"/>

                <ImageView
                    android:id="@+id/headerIndicator"
                    android:layout_width="@dimen/space_24"
                    android:layout_height="@dimen/space_24"
                    android:layout_marginLeft="@dimen/space_16"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                <ImageView
                    android:id="@+id/ivClearAll"
                    android:layout_width="@dimen/space_24"
                    android:layout_height="@dimen/space_24"
                    android:layout_marginLeft="@dimen/space_16"
                    app:srcCompat="@drawable/ic_clear_black_24dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expansion_expanded="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/space_10"
                android:paddingRight="@dimen/space_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_search_black_24dp"
                        android:layout_marginRight="@dimen/space_10"/>

                    <EditText
                        android:id="@+id/etNameAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:hint="@string/scanner_filter_name_hint"/>

                    <ImageView
                        android:id="@+id/ivNameAddressMore"
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_more_vert_black_24dp"/>

                    <ImageView
                        android:id="@+id/ivNameAddressClear"
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_clear_black_24dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_rss_feed_black_24dp"
                        android:layout_marginRight="@dimen/space_10"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0x"
                        android:textColor="@color/txt_dark_1"
                        android:textSize="@dimen/txt_14"/>

                    <EditText
                        android:id="@+id/etData"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:hint="@string/scanner_filter_data_hint"/>

                    <ImageView
                        android:id="@+id/ivDataMore"
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_more_vert_black_24dp"/>

                    <ImageView
                        android:id="@+id/ivDataClear"
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_clear_black_24dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginBottom="@dimen/space_10">

                    <ImageView
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_signal_wifi_3_bar_black_24dp"
                        android:layout_marginRight="@dimen/space_10"/>

                    <com.vgaw.nrfconnect.view.SBWithTV
                        android:id="@+id/sbRSSI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginBottom="@dimen/space_10">

                    <ImageView
                        android:layout_width="@dimen/space_24"
                        android:layout_height="@dimen/space_24"
                        app:srcCompat="@drawable/ic_favorite_black_24dp"
                        android:layout_marginRight="@dimen/space_10"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/scanner_filter_only_favorite"
                        android:textColor="@color/txt_dark_1"
                        android:textSize="@dimen/txt_16"/>

                    <CheckBox
                        android:id="@+id/cbFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </com.github.florent37.expansionpanel.ExpansionLayout>
    </LinearLayout>
</layout>